css/style.css
@font-face {
  font-family: 'Moderat-Bold';
  src: url("../assets/180123_SAI_brand_design_website_font/Moderat-Bold.otf");
  font-weight: 900;
  font-style: normal; }

@font-face {
  font-family: 'Moderat-Regular';
  src: url("../assets/180123_SAI_brand_design_website_font/Moderat-Regular.otf");
  font-weight: 500;
  font-style: normal; 
}

html {
  min-height: 100%;
  padding-bottom: 1px;
  position: relative;
  display: block;
  height: 100vh;
  font-size: 15px; }

body {
  position: relative;
  display: block;
  height: 100vh;
  background-color: white; 

}

.hidden {
  visibility: hidden;
  display: none;
}

.easter-egg {
  visibility: hidden;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-height: 100%;
  opacity: 0;
  transition: opacity 0.2s linear;
}
#anne-barlinckhoff{
  width: 100%;
  height: auto;
}

.visible {
  visibility: visible;
  opacity: 1;
  transition: opacity 0.2s linear;
}
.easter-egg-hunt {
  height: 400px;
  width: 200px;
}

.hide-background {
    position:absolute;
    padding:0;
    margin:0;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: white;
    visibility: hidden;
  }

.download {
  display: none;
  position: fixed;
  top: 90%;
  left: 50% !important;
  transform: translate(-50%, -90%) !important;
  font-family: 'Moderat-Regular';
  font-size: 24px;
   color: black;

}

.wrap {
  max-height: 773px;
  width: 100%;
   }


.header {
  display: block;
  max-width: 840px;
  margin: 0 auto;
  text-align: center;
  -webkit-tap-highlight-color: transparent;
  position: relative;
  cursor: url(../assets/180123_SAI_brand_design_website_PNGs/Desktop/180123_SAI_Website_Pointer-23.png), pointer; 
}

h1 {
  cursor: url(../assets/180123_SAI_brand_design_website_PNGs/Desktop/180123_SAI_Website_Pointer-23.png), pointer;
  position: relative;
  display: inline-block;
  margin: 0;
  overflow: hidden;
  vertical-align: top;
  white-space: nowrap;
  font-size: 32px;
  font-family: "Moderat-Bold";
  font-weight: 900;
  text-transform: uppercase;
  letter-spacing: 6px;
  transition: width 0.7s ease; }
  @media (min-width: 1024px) {
    h1 {
      font-size: 32px; } }

h1 span {
  opacity: 0;
  transition: opacity 0.6s ease 0s;
  color: #b9003c; }

.society {
  width: 18px;
  letter-spacing: 6.6635px; }

.art {
  width: 24px; }

.interaction {
  width: 12px; }

.sai-text {
  position: absolute;
  top: -50px;
  display: none;
  width: 100%;
  letter-spacing: 9px; }
  .sai-text:hover {
    cursor: url(../assets/180123_SAI_brand_design_website_PNGs/Desktop/180123_SAI_Website_Pointer-23.png), pointer; }

.header[data-lang="0"] .sai-en {
  display: block; }

.header[data-lang="1"] .sai-it {
  display: block; }

.header[data-lang="2"] .sai-es {
  display: block; }

.header[data-lang="3"] .sai-fr {
  display: block; }

.header[data-lang="4"] .sai-pt {
  display: block; }

.header[data-lang="5"] .sai-jp {
  display: block; }

.header[data-lang="5"] .sai-jp-original {
  opacity: 1;
  transition: opacity 0.4s ease; }

.header[data-lang="5"].hover .sai-jp-original {
  opacity: 0;
  transition: opacity 0.4s ease; }

.header[data-lang="5"].hover .sai-jp-wrapper {
  transition: opacity 0.4s ease;
  opacity: 1; }

.sai-jp-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  opacity: 0; }
  .sai-jp-wrapper h1 {
    margin-top: -6px;
    color: #b9003c; }

a {
  text-decoration: none;
  color: #3c474b;
  display: inline-block;
  outline: none;
  cursor: url(../assets/180123_SAI_brand_design_website_PNGs/Desktop/180123_SAI_Website_Pointer-23.png), pointer; }

.content {
  font-family: "Moderat-Regular";
  text-align: center; }

div.content {
  height: 200px;
  transition: 0.4s ease; 
  position: absolute;
  left: 50%;
  top: 55%;
  transform: translate(-50%, -55%);
}

.contact {
  width: 244px;
  margin: 0 auto;
  /*display: none;*/
  height: 90px; }

.sai-content {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: block;
  height: 140px;
  margin: auto; }

#sai-address {
  width: 250px;
  position: relative; }

#email {
  position: relative;
  top: 15px; }

#phone {
  position: relative;
  top: 15px; }
#instagram{
    width: 20px;
    position: absolute;
    top: 170px;
    left: 50%;
    transform: translate(-50%);
}

p {
  color: #3c474b;
  margin: 0 auto;
  line-height: 18px; }

#culture {
  width: 450px;
  margin: 0 auto; }

img.sai-flower {
  width: 54px;
  height: auto;
  margin: 0 auto;
  position: relative;
  top: 40px;
  padding-right: 8px;
  padding-left: 8px; }

.main-carousel {
  width: 250px;
  margin: 0 auto;
  position: absolute !important;
  top: 90%;
  left: 50%;
  transform: translate(-50%, -90%); }

.main-vertical-carousel {
    position: absolute !important;
    left: 50%;
    top: 80%;
    transform: translate(-50%, -80%); 
    width: 200px;}
  .main-vertical-carousel .slick-prev,
  .main-vertical-carousel .slick-next {
    transform: rotate(90deg);
    position: relative;
    left: 50%;
    height: 11.458px;
    top: -7px; 
    margin: 0px 0 0 -2.5%;
  }
.main-vertical-carousel .slick-list.draggable {
  height: 65px !important;
  margin-top: 10px;
  margin-bottom: 10px; 
}

.carousel-cell.career {
  height: 17px; }

.work-carousel {
  /*display: none;*/
  height: 0; }

.culture-carousel {
/*  display: none;*/
  height: 0; }

.career-carousel {
  /*display: none;*/
  height: 0; }

.carousel-cell {
  outline: none;
  cursor: url(../assets/180123_SAI_brand_design_website_PNGs/Desktop/180123_SAI_Website_Pointer-23.png), pointer; }

span.carousel-cell.slick-slide {
  width: 54px;
  color: #3c474b;
  font-family: "Moderat-Regular";
  outline: none;
  cursor: url(../assets/180123_SAI_brand_design_website_PNGs/Desktop/180123_SAI_Website_Pointer-23.png), pointer; }

div.carousel-cell {
  width: 84px !important; }
/* ... */

